# Wolf-Gang-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Compiling.md  LICENSE.txt  README.md  animation.cpp  animation.hpp  api_docs.lua  audio.cpp  audio.hpp  dictionary.hpp  editor.cpp  editor.hpp  main.cpp  node.cpp  node.hpp  parsers.hpp  particle_engine.cpp  particle_engine.hpp  ptr_GC.hpp  rect.hpp  renderer.cpp  renderer.hpp  return.hpp  rpg.cpp  rpg.hpp  rpg_config.hpp  rpg_entities.cpp  rpg_entity.cpp  rpg_entity.hpp  rpg_interpreter.cpp  rpg_interpreter.hpp  rpg_jobs.cpp  rpg_jobs.hpp  rpg_managers.cpp  rpg_managers.hpp  rpg_scene.cpp  rpg_scene.hpp  scene_loader.cpp  (+18 more)
cmake_modules/: FindSFML.cmake  FindTGUI.cmake
editor/: editor.cpp  editor.hpp
include/editor/: file_opener.hpp  imgui-config.hpp  imgui_ext.hpp
include/engine/: AS_utility.hpp  animation.hpp  audio.hpp  binary_util.hpp  color.hpp  controls.hpp  eval.hpp  filesystem.hpp  function_encap.hpp  hash.hpp  hide_console.hpp  log.hpp  logger.hpp  math.hpp  node.hpp  parsers.hpp  particle_engine.hpp  pathfinding.hpp  primitive_builder.hpp  ptr_GC.hpp  rect.hpp  renderer.hpp  resource.hpp  resource_manager.hpp  resource_pack.hpp  terminal.hpp  texture.hpp  time.hpp  utility.hpp  vector.hpp
include/rpg/: character_entity.hpp  collision_box.cpp  collision_box.hpp  collision_system.hpp  controls.hpp  editor.hpp  entity.hpp  entity_manager.hpp  flag_container.hpp  game_settings_loader.hpp  panning_node.hpp  player_character.hpp  rpg.hpp  rpg_config.hpp  rpg_managers.hpp  rpg_resource_directories.hpp  rpg_resource_loaders.hpp  scene.hpp  scene_loader.hpp  script_context.hpp  script_function.hpp  script_system.hpp  sprite_entity.hpp  tilemap_display.hpp  tilemap_loader.hpp  tilemap_manipulator.hpp
include/wge/audio/: ogg_vorbis_stream.hpp
include/wge/core/: asset.hpp  asset_config.hpp  asset_location.hpp  asset_manager.hpp  behavior.hpp  behavior_component.hpp  behavior_system.hpp  component.hpp  component_manager.hpp  component_storage.hpp  component_type.hpp  context.hpp  destruction_queue.hpp  engine.hpp  factory.hpp  forwards.hpp  game_object.hpp  game_settings.hpp  handle.hpp  instance.hpp  instance_id.hpp  layer.hpp  messaging.hpp  object.hpp  object_id.hpp  object_manager.hpp  object_node.hpp  object_resource.hpp  resource.hpp  scene.hpp  scene_resource.hpp  serializable.hpp  serialize_type.hpp  system.hpp  tilemap.hpp  transform_component.hpp
include/wge/editor/: editor.hpp
include/wge/filesystem/: exception.hpp  file_input_stream.hpp  file_structure.hpp  filesystem_interface.hpp  input_stream.hpp  path.hpp  system_filesystem.hpp
include/wge/graphics/: camera.hpp  color.hpp  framebuffer.hpp  glfw_backend.hpp  graphics.hpp  graphics_backend.hpp  image.hpp  opengl_framebuffer.hpp  opengl_texture.hpp  render_batch_2d.hpp  renderer.hpp  sprite.hpp  sprite_component.hpp  texture.hpp  texture_asset_loader.hpp  tileset.hpp
include/wge/logging/: log.hpp
include/wge/math/: aabb.hpp  anchor.hpp  angle.hpp  math.hpp  matrix.hpp  rect.hpp  transform.hpp  transform_stack.hpp  transformations.hpp  vector.hpp
include/wge/physics/: box_collider_component.hpp  physics_component.hpp  physics_world.hpp  physics_world_component.hpp
include/wge/scripting/: angelscript_script.hpp  (+5 more)
resources/: astest.as  astestthing.as  frag.glsl  imgui.ini  myscene.asset  mytex.png.asset  vert.glsl
script/internal/: docs.txt  entity.as  follow_character.as  fx.as  gui.as  internal.as  math.as  music.as  narrative.as  scene.as  scoped_entity.as  speed.as  vector_tools.as
src/: main.cpp  xmlshortcuts.hpp
src/audio/: ogg_vorbis_stream.cpp
src/core/: asset.cpp  asset_config.cpp  asset_manager.cpp  component.cpp  context.cpp  engine.cpp  factory.cpp  game_object.cpp  instance.cpp  layer.cpp  object.cpp  object_id.cpp  object_manager.cpp  object_node.cpp  object_resource.cpp  scene.cpp  scene_resource.cpp  transform_component.cpp
src/editor/: application.cpp  asset_document.hpp  asset_manager_window.cpp  asset_manager_window.hpp  command.hpp  component_inspector.hpp  context.cpp  context.hpp  editor.cpp  editor.hpp  file_opener.cpp  history.cpp  history.hpp  icon_codepoints.hpp  imgui_editor_tools.cpp  imgui_editor_tools.hpp  imgui_ext.cpp  imgui_ext.hpp  inspector.hpp  object_editor.cpp  object_editor.hpp  script_editor.cpp  script_editor.hpp  signal.hpp  sprite_editor.cpp  sprite_editor.hpp  text_editor.cpp  text_editor.hpp  widgets.cpp  widgets.hpp
src/engine/: animation.cpp  audio.cpp  color.cpp  controls.cpp  formatted_text.cpp  hash.cpp  hide_console.cpp  log.cpp  logger.cpp  node.cpp  particle_engine.cpp  pathfinding.cpp  primitive_builder.cpp  renderer.cpp  resource_pack.cpp  rich_text.cpp  sprite.cpp  terminal.cpp  text.cpp  texture.cpp  time.cpp  utility.cpp  vertex_batch.cpp
src/filesystem/: file_input_stream.cpp  path.cpp  system_filesystem.cpp
src/graphics/: framebuffer.cpp  glfw_backend.cpp  graphics_backend.cpp  image.cpp  null_backend.hpp  opengl_backend.cpp  opengl_framebuffer.cpp  opengl_shaders.hpp  renderer.cpp  shader_util.hpp  shader_util.inl  sprite_component.cpp  texture.cpp  texture_asset_loader.cpp
src/logging/: log.cpp
src/main/: main.cpp
src/math/: angle.cpp  math.cpp  rect.cpp  transform.cpp
src/physics/: box_collider_component.cpp  physics_component.cpp  physics_world.cpp  physics_world_component.cpp
src/rpg/: character_entity.cpp  collision_box.cpp  collision_system.cpp  editor.cpp  entity.cpp  entity_manager.cpp  flag_container.cpp  panning_node.cpp  player_character.cpp  resource.cpp  rpg.cpp  rpg_managers.cpp  rpg_resource_directories.cpp  rpg_resource_loaders.cpp  scene.cpp  scene_loader.cpp  script_system.cpp  sprite_entity.cpp  tilemap_display.cpp  tilemap_loader.cpp  tilemap_manipulator.cpp
src/scripting/: angelscript_script.cpp  lua_engine.cpp  script.cpp  script_engine.cpp
src/ui/: clipboard.cpp
src/util/: clock.cpp  hash.cpp  json_helpers.cpp  uuid.cpp  uuid_rerouter.cpp
tests/: main.cpp  tests1.cpp
tests/filesystem/: file_structure.cpp
tinyxml2/: xmlshortcuts.hpp
(+19 files in other folders)
